@@ -32,6 +32,9 @@
 # For additional information see http://www.ethernut.de/
 #
 # $Log$
+# Revision 1.3  2009/03/05 22:16:56  freckle
+# use __NUT_EMULATION instead of __APPLE__, __linux__, or __CYGWIN__
+#
 # Revision 1.2  2005/07/26 16:09:26  haraldkipp
 # Removed unused items and added INCPRE.
 #
@@ -87,7 +90,7 @@
 
 include $(top_srcdir)/UserConf.mk
 
-DEFS  = $(HWDEF)
+DEFS  = $(HWDEF) -D__NUT_EMULATION__
 
 LIBDIR = $(top_srcdir)/lib/gcc/$(MCU)
 INCPRE = -I
