@@ -77,6 +77,9 @@
 
 /*
  * $Log$
+ * Revision 1.6  2009/03/05 22:16:57  freckle
+ * use __NUT_EMULATION instead of __APPLE__, __linux__, or __CYGWIN__
+ *
  * Revision 1.5  2008/08/11 07:00:23  haraldkipp
  * BSD types replaced by stdint types (feature request #1282721).
  *
@@ -104,7 +107,7 @@
 #include <sys/types.h>
 
 /* use native version on unix emulation */
-#if defined(__linux__) || defined(__APPLE__) || defined(__CYGWIN__)
+#ifdef __NUT_EMULATION__
 #include <netinet/in_orig.h>
 /* assure _NETINET_IN_H_ is set */
 #undef  _NETINET_IN_H_
