@@ -33,6 +33,9 @@
 
 /*
  * $Log$
+ * Revision 1.17  2009/03/05 22:16:57  freckle
+ * use __NUT_EMULATION instead of __APPLE__, __linux__, or __CYGWIN__
+ *
  * Revision 1.16  2008/08/11 07:00:34  haraldkipp
  * BSD types replaced by stdint types (feature request #1282721).
  *
@@ -130,7 +133,13 @@ volatile uint8_t ms62_5 = 0;
 
 /*@}*/
 
-#if defined(__AVR__)
+#ifdef __NUT_EMULATION__
+// avoid stdio nut wrapper */
+#define NO_STDIO_NUT_WRAPPER
+#include "../arch/unix/os/nutinit.c"
+#include "../arch/unix/os/options.c"
+#include "../arch/unix/dev/eeprom.c"
+#elif defined(__AVR__)
 #include "../arch/avr/os/nutinit.c"
 #elif defined(__arm__)
 #include "../arch/arm/os/nutinit.c"
@@ -138,11 +147,5 @@ volatile uint8_t ms62_5 = 0;
 #include "../arch/h8300h/os/nutinit.c"
 #elif defined(__m68k__)
 #include "../arch/m68k/os/nutinit.c"
-#elif defined(__linux__) || defined(__APPLE__) || defined(__CYGWIN__)
-// avoid stdio nut wrapper */
-#define NO_STDIO_NUT_WRAPPER
-#include "../arch/unix/os/nutinit.c"
-#include "../arch/unix/os/options.c"
-#include "../arch/unix/dev/eeprom.c"
 #endif
 
