@@ -1,10 +1,19 @@
-$Id: ChangeLog,v 1.533 2009/03/05 22:02:26 freckle Exp $
+$Id: ChangeLog,v 1.534 2009/03/05 22:16:56 freckle Exp $
 
 2009-03-05  Matthias Ringwald <mringwal@inf.ethz.ch>
     * arch/unix/dev/ostimer.c, arch/unix/os/nutinit.c:
          added return NULL to make compiler happy
     * arch/unix/os/thread.c:   fix function prototype for compiler
     * fs/pathops: unix emulation requires unistd.h as first include
+    * Makedefs.unix-gcc, arch/unix/os/nutinit.c, dev/ihndlr.c,
+      include/compiler.h, include/errno.h, include/netdb.h,
+      include/stdio.h, include/time.h, include/unistd.h, include/arch/timer.h,
+      include/arch/unix.h, include/dev/board.h, include/dev/debug.h,
+      include/dev/irqreg.h, include/dev/uartavr.h, include/dev/usartavr.h,
+      include/netinet/in.h, include/sys/atom.h, include/sys/nut_types.h,
+      include/sys/thread.h, include/sys/types.h, net/confnet.c, os/nutinit.c,
+      os/osdebug.c, os/thread.c, os/timer.c:
+        use __NUT_EMULATION instead of __APPLE__, __linux__, or __CYGWIN__
     
 2009-02-28  Ole Reinhardt <ole.reinhardt@thermotemp.de>
 	* boot/bootmon/arp.c: Added ARP responder
